fix horizontal scroll - thx to brianzelip

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -246,7 +246,7 @@ color:gray;
   background:#f8f8f8;
   width:100%;
   border-bottom:1px solid lightgray;
-  padding:2em 0em;
+  padding:2em 15px;
 }
 
 
